--- a/android/app/src/main/res/layout/login_frag.xml
+++ b/android/app/src/main/res/layout/login_frag.xml
@@ -4,18 +4,24 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background_material_dark"
     tools:context=".MainActivity$PlaceholderFragment">
 
     <TextView
-        android:text="lat"
-        android:id="@+id/latitude"
+        android:text="@string/title_name"
+        android:textSize="50sp"
+        android:id="@+id/title_name"
+        android:layout_above="@+id/auth_button"
+        android:textColor="#FFFFFF"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/longtitude"
-        android:layout_below="@+id/latitude"
-        android:text="longtitude"
+    <com.facebook.widget.LoginButton
+        android:id="@+id/auth_button"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
