--- a/android/app/src/main/res/layout/questionaire_frag.xml
+++ b/android/app/src/main/res/layout/questionaire_frag.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/background_material_dark"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="YOU'RE IN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </RelativeLayout>
