--- a/android/app/src/main/res/layout/liveable_card.xml
+++ b/android/app/src/main/res/layout/liveable_card.xml
@@ -9,6 +9,8 @@
         android:layout_height="300dp" />
 
     <TextView
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/liveable_image"
         android:id="@+id/price"
         android:layout_width="wrap_content"
