--- a/android/app/src/main/res/layout/recommend_frag.xml
+++ b/android/app/src/main/res/layout/recommend_frag.xml
@@ -4,17 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background_material_dark"
     android:layout_width="match_parent">
 
-    <com.wenchao.cardstack.CardStack
+    <com.andtinder.view.CardContainer
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_stack"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:padding="20dp"
-        />
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
