--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -97,24 +97,34 @@ html(lang="en")
                         .col.center.l12.s12
                             h4.white-text The Team
                     .row
-                        .col.l4.s4
+                        .col.l4.s6
                             .member.center
+                                div
+                                    img.responsive-img(src="img/profile5.jpg")
                                 h5: a.white-text(href="http://danielfang.org/") Daniel Fang
                                 p API/DevOps
-                        .col.l4.s4
+                        .col.l4.s6
                             .member.center
+                                div
+                                    img.responsive-img(src="img/profile3.jpg")
                                 h5: a.white-text(href="#") Deepak Nettem
                                 p Data (Resources/Datasets)
-                        .col.l4.s4
+                        .col.l4.s6
                             .member.center
+                                div
+                                    img.responsive-img(src="img/profile4.jpg")
                                 h5: a.white-text(href="#") James Lee 
                                 p Data (Research)
-                        .col.l4.s4
+                        .col.l4.s6
                             .member.center
+                                div
+                                    img.responsive-img(src="img/profile2.jpg")
                                 h5: a.white-text(href="#") Jay Feng
                                 p Data (Algorithms)
-                        .col.l4.s4
+                        .col.l4.s6
                             .member.center
+                                div
+                                    img.responsive-img(src="img/profile1.jpg")
                                 h5: a.white-text(href="http://justinharjanto.com/") Justin Harjanto 
                                 p Android
 
